# Smart-Washing-Machine

./: CMakeLists.txt  Main.qml  README.md  main.cpp
components/: CMakeLists.txt  ElectricityPricePlan.qml  HeaderBar.qml  MRadioButton.qml  MTumbler.qml  ScheduleOptions.qml  WashStarts.qml
